# Final-project

./: README.md
MyGame/: .gitignore  CMakeLists.txt  Makefile  main.cpp
MyGame/Bullet/: Arrow.cpp  Arrow.hpp  Bullet.cpp  Bullet.hpp  FireBullet.cpp  FireBullet.hpp  Knife.cpp  Knife.hpp  LaserBullet.cpp  LaserBullet.hpp  Sword.cpp  Sword.hpp  rock.cpp  rock.hpp
MyGame/Enemy/: Enemy.cpp  FlyEnemy.cpp  FlyEnemy.hpp  PlaneEnemy.cpp  PlaneEnemy.hpp  SoldierEnemy.cpp  SoldierEnemy.hpp  TankEnemy.cpp  TankEnemy.hpp
MyGame/Engine/: Allegro5Exception.cpp  Allegro5Exception.hpp  AudioHelper.cpp  AudioHelper.hpp  Collider.cpp  Collider.hpp  GameEngine.cpp  GameEngine.hpp  Group.cpp  Group.hpp  IControl.hpp  IObject.cpp  IObject.hpp  IScene.cpp  IScene.hpp  LOG.cpp  LOG.hpp  Message.hpp  NetWork.cpp  NetWork.hpp  PathHelper.cpp  PathHelper.hpp  Point.cpp  Point.hpp  Resources.cpp  Resources.hpp  Sprite.cpp  Sprite.hpp
MyGame/Items/: Item.cpp  Item.hpp  Items.hpp
MyGame/Player/: Player.cpp  Player.hpp
MyGame/Resource/: Map.txt  Play.txt  scoreboard2.txt
MyGame/Scene/: LogScene.cpp  LogScene.hpp  LoseScene.cpp  LoseScene.hpp  MapScene.cpp  MapScene.hpp  PersonalScene.cpp  PersonalScene.hpp  PlayScene.cpp  PlayScene.hpp  ResultScene.cpp  ResultScene.hpp  ScoreBoardScene.cpp  ScoreBoardScene.hpp  ScoreBoardScene1.cpp  ScoreBoardScene1.hpp  ScoreBoardScene2.cpp  ScoreBoardScene2.hpp  SettingsScene.cpp  SettingsScene.hpp  StageSelectScene.cpp  StartScene.cpp  StoryScene.cpp  StoryScene.hpp  WinScene.hpp
MyGame/Soldier/: Soldier.cpp  Soldier.hpp  dragen.cpp  dragen.hpp  master.cpp  master.hpp  ninja.cpp  ninja.hpp  shooter.cpp  shooter.hpp  slime.cpp  slime.hpp  vikin.cpp  vikin.hpp
MyGame/Tower/: Tower.cpp  Tower.hpp
MyGame/Turret/: FireTurret.hpp  LaserTurret.cpp  LaserTurret.hpp  MachineGunTurret.cpp  MachineGunTurret.hpp  ShortTurret.cpp  ShortTurret.hpp  Turret.cpp  Turret.hpp  TurretButton.cpp  TurretButton.hpp
MyGame/UI/Animation/: DirtyEffect.cpp  DirtyEffect.hpp  ExplosionEffect.cpp  ExplosionEffect.hpp  Plane.cpp  Plane.hpp  UpgradeEffect.cpp  UpgradeEffect.hpp
MyGame/UI/Component/: Image.cpp  Image.hpp  ImageButton.cpp  ImageButton.hpp  Label.cpp  Label.hpp  Slider.cpp  Slider.hpp  TextBox.cpp  TextBox.hpp
MyGame/enet-master/: test.cpp
enet-master/: CMakeLists.txt  test.cpp
